2010-10-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* frame.py: Added the default icon configuration.

2010-09-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/actors.py, image/imageclutter.py, plugins/base.py,
	  folder.py, fspot/__init__.py, shotwell.py: Added new clutter
	  icons for deleting photos.

2010-09-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/*: Added more translable strings.  Thanks Cristian
	  Marchi! (issue #63)
	* it.po: Added new translation.  Thanks Cristian Marchi!
	  (issue #62)

2010-09-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/actors.py (IconTexture): Adjusted animation time.

2010-09-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/tooltip.py, plugins/*: Added more information on EXIF
	  tooltips.

2010-09-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/*: Added about dialogs.

2010-09-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py: Added support for plugin about dialog. 
	* haikyo.py (PhotoSourceHaikyoUI): Fixed the sensitiveness of
	  target widget.
	* shotwell.py: Added support for Shotwell.
	* iconimage.py (IconImage.get_image): Fixed a bug.

2010-09-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ja.po: Updated translations.

2010-09-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0.1 release.
	* fspot/__init__.py: Added support for F-Spot 0.7.x database.

2010-07-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/haikyo.py: Added new plugin for haikyo
	  clock (http://www.madin.jp/haikyo/).

2010-07-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0 release.

2010-07-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py, EXIF.py: Removed obsolete has_key methods.

2010-07-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b5 release.
	* keyring.py: Fixed a segmentation fault problem of relating to
	  use DBus from multiple threads.

2010-07-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
